Trying to fix overflow

--- a/css/style.css
+++ b/css/style.css
@@ -17,13 +17,15 @@
 
 html, body{
   font-family: "Proxima Nova";
-  min-height: 100%;
+  height: 100%;
 }
 
 #landing{
   position: relative;
   height: 100%;
   background-image: linear-gradient(to right bottom, #bb4356, #9b4267, #75446b, #524260, #3b3c4b);
+  overflow:hidden;
+  
 }
 
 #landing #particles-js{  
@@ -35,7 +37,7 @@ html, body{
   mix-blend-mode: hard-light;
   /* -webkit-mask-image: -webkit-gradient(linear, left top, left bottom, 
     from(rgba(0,0,0,0)), to(rgba(0,0,0,1))); */
-    overflow: hidden;
+   overflow: hidden
 }
 
 #landing #particles-js::after{
@@ -151,6 +153,10 @@ box-shadow: 0px 6px 0px #b38833, 0px 3px 15px rgba(0,0,0,.4);
 
 @media(max-width:639px){
 
+  html,body{
+    height: unset;
+    min-height: 100%;
+  }
   #landing .container{
     flex-direction: row-reverse;
     padding-top: 60px;
